# stats_bot

./: .gitignore  LICENSE  README.md  dev_bot.sh  dev_db.sh  docker-compose.yaml  main.py  pyproject.toml  update.sh
.github/: dependabot.yml
app/: .env.example  Dockerfile  main.py  pyproject.toml
app/src/: base.py  bot.json  filters.py  settings.py
app/src/database/: database.py  models.py
app/src/db/: crud.py  database.py  models.py
app/src/handlers/: commands.py  service.py  statictics.py  voice.py
app/src/logic/: dont_care.py  pohui.py  privacy.py  stats.py  stats_logic.py
app/src/tools/: file_manager.py  formatter.py  recognition.py  schemas.py
app/tmp/: stdout
handlers/: default.py
