[tool.poetry]
name = "app"
version = "0.1.0"
description = "stats bot"
authors = ["Ramnck, Flict"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
decouple = "^0.0.7"
tortoise-orm = "^0.19.2"
aiogram = "3.0.0b6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
